Bug 115923 - Clicking the fill handle triggers automatic horizontal scrolling
Summary: Clicking the fill handle triggers automatic horizontal scrolling
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0 target:6.0.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: AutoFill
  Show dependency treegraph
 
Reported: 2018-02-21 21:46 UTC by Isaac Newman
Modified: 2018-04-10 20:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Isaac Newman 2018-02-21 21:46:35 UTC
Description:
Clicking the fill handle on a fully visible cell near the right edge of the window causes automatic horizontal scrolling and subsequent autofill of cells to the right.



Steps to Reproduce:
1. Enter a number of formula in a cell fully visible cell (e.g. E1)
2. Resize the window to make the next column (e.g. F) only partially visible
3. Click on the fill handle

Actual Results:  
The sheet scrolls to the right as soon as the handle is clicked.

Expected Results:
Scrolling should happen only when the mouse moves outside of visible sheet area. Immediate horizontal scrolling is not desired if the user intends to autofill by dragging down.


Reproducible: Always


User Profile Reset: No



Additional Info:
This happens with GTK and KDE themes; and both mouse and touchpad inputs. LibreOffice 5.4 and 6.0 are affected, I haven't tested earlier versions.


User-Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Buovjaga 2018-03-07 16:57:33 UTC
Repro, but not in 3.6.

Arch Linux 64-bit
Version: 6.1.0.0.alpha0+
Build ID: 856c57f20f9b07c686a854e0ccbb6ee3b0ee4791
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on March 7th 2018

Arch Linux 64-bit
Version 3.6.7.2 (Build ID: e183d5b)
Comment 2 Xisco Faulí 2018-03-14 18:56:46 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2016-07-11 16:23:17 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2016-07-11 16:26:20 +0100
commit 19694ee33b6605e0b881392ad98eeec164ea770c (patch)
tree 0006158425aa77085c281003122e4dc9837d8f41
parent 829dc5ddc53bf0c8e371dd5dd32a7edbf24cdbbf (diff)
Related: tdf#100573 try a different approach to solving tdf#46637
Try scrolling to the selected cell if its not fully visible already
in SetCursorAtPoint to get the cell fully visible if possible

Bisected with: bibisect-linux-64-5.3

Adding Cc: to Caolán McNamara
Comment 3 Caolán McNamara 2018-03-15 16:34:02 UTC
The problem seems to be that the fill handle is drawn over the not-fully visible cell so on initial click the mouse is over a half visible cell so the pointer is sort of logically on the cell to the left but physically over the cell to the right so getting the cell as the current mouse pos gives the partially visible cell which is then scrolled into place which is fully visible
Comment 4 Commit Notification 2018-03-16 09:32:24 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7619390bd15fa26fc8f74d75f187cf8bf2fca58b

Resolves: tdf#115923 try a different approach to solving tdf#46637

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2018-03-16 09:49:52 UTC
so, for that autofill case we're now back to the historical scroll leaving the "new" scroll in place for anything that isn't autofill. Backport to 6-0 in gerrit
Comment 6 Commit Notification 2018-03-16 16:01:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d47a28723ee5b8df2f9e34449b15fac7970a1c69&h=libreoffice-6-0

Resolves: tdf#115923 try a different approach to solving tdf#46637

It will be available in 6.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.