Resolves: tdf#115923 try a different approach to solving tdf#46637

Try scrolling to the cell the mouse is over if its not fully visible already
and this is not autofill selection. To avoid the mouse over the autofill handle
which overflows into neighbours scrolling the neighbour cell into view before
its truly desired to be selected when the mouse passes the center point

in other words, for autofill go back to how it always was

Change-Id: I6f67ad0f49c2d4087949f71f38322f06ced13c79